--- a/color.html
+++ b/color.html
@@ -5,11 +5,11 @@
     <link rel="stylesheet" text="text/css" href="color.css">
 </head>
 <body>
-    <h1> The Great
+    <h1> Guess what color
         <br>
         <span id="colorDisplay">Color</span>
         <br>
-        Game </h1>
+        is </h1>
 <div id="stripe">
     <button id="reset">New Colors</button>
     <span id="message"></span>
